@@ -12,7 +12,10 @@ Item								   Prio Status
             (see below also)
   + 101007: Error in reading back axis labels.			      1 ----
       - Store row and column labels separately in the document		done
-      - Load old type files without separately stored labels.		--
+      - Load old type files without separately stored labels.		done
+      ----------------------------------------------------------------
+      I don't know if the following is needed once we have a new 
+      version of KDChart.
       - Save row and column labels	 				--
       - Load row and column labels	 				--
 
